# mattermost-embiggenator

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
docs/: abac.md  commands.md  configuration.md  docker-compose.md  faq.md  getting-started.md
embiggenator/: __init__.py  __main__.py  cli.py  config.py  models.py  models_mattermost.py  utils.py
embiggenator/data/texts/: frankenstein.txt  pride_and_prejudice.txt
embiggenator/generators/: abac.py  avatar.py  content.py  groups.py  mattermost.py  users.py
embiggenator/output/: ldap_writer.py  ldif_writer.py  mattermost_client.py  mattermost_writer.py
examples/: docker-compose.sidecar.yml  docker-compose.yml  embiggenator.yaml
tests/: test_abac.py  test_avatar.py  test_config.py  test_content.py  test_generators.py  test_ldap_lifecycle.py  test_ldif_writer.py  test_login_mattermost.py  test_mattermost_client.py  test_mattermost_orchestrator.py  test_mattermost_writer.py  test_reset_mattermost.py
