[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embiggenator"
version = "1.2.1"
description = "LDAP test data and Mattermost content generator for Mattermost testing"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "click>=8.1",
    "faker>=20.0",
    "ldap3>=2.9",
    "pyyaml>=6.0",
]

[project.scripts]
embiggenator = "embiggenator.cli:cli"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["embiggenator*"]

[tool.setuptools.package-data]
embiggenator = ["data/defaults/*.ldif", "data/texts/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
